# WhatTheBrainfuck

./: README.md  SPEC.md
wtbfc/: Cargo.toml  lexer_test.wbf  parser_test.wbf
wtbfc/src/: compiler.rs  lexer.rs  main.rs  optimizer.rs  parser.rs
wtbfc/src/compiler/: backend.rs  block_gen.rs  instruction.rs  mod.rs
wtbfc/src/parser/: mod.rs  node.rs
