[package]
name = "wtbfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"

logos = "0.12.0"
cranelift = "0.78.0"
cranelift-module = "0.78.0"
cranelift-object = "0.78.0"
target-lexicon = "0.12.2"
